replaced constants with let to avoid confilcts and wrapped function

--- a/css/header-style.css
+++ b/css/header-style.css
@@ -41,11 +41,13 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.5);
   height: 80px;
   z-index: 2;
   justify-content: space-evenly;
   gap: 20%;
+  backdrop-filter: blur(1.17);
+  
 }
 
 .fixed-bar .content-wrapper {
@@ -453,13 +455,26 @@ body {
 
 
 
+.coding-svg{
+  height:40px;
+}
+
+.right-section{
+  display:flex;
+  flex-direction: column;
+  padding-right: 10px;
+
+} 
+
+
 @media (max-width: 767px) {
  
   .fixed-bar {
     justify-content: space-around;
     gap: 50%;
-    
+  
   }
+
 
   .menu {
     position: absolute;
@@ -518,5 +533,11 @@ body {
   .footer .footer-row a i{
     margin:0% 3%;
   }
+
+  .right-section{
+    
+      text-align:center;
+  
+  }  
 }
   
